// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snap 1`] = `
<div
  class="Card"
>
  test default card
</div>
`;

exports[`matches default snap outlined 1`] = `
<div
  class="Card Card--outlined"
>
  test outlined card
</div>
`;

exports[`matches snap with a card title 1`] = `
<div
  class="Card Card--outlined"
>
  test card with card title
</div>
`;
